prevent content behind the menu

--- a/style.css
+++ b/style.css
@@ -57,6 +57,10 @@ body {
   display:inline;
 }
 
+.header {
+    margin-top: 93px;
+}
+
 .header .navbar-wrapper {
   padding-top: 13px;
 }
